--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
-  <link rel="stylesheet" href="{{site.baseurl}}/assets/main.css">
+  <link rel="stylesheet" href="{{site.newbaseurl}}/assets/main.css">
   <style>
     .task-list {
       margin: 0;
