--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
-  <link rel="stylesheet" href="{{site.baseurl}}/assets/main.css">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <style>
     .task-list {
       margin: 0;
@@ -12,8 +12,6 @@
       list-style-type: none;
     }
   </style>
-
-
 
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
