--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "assets/css/ai-highlight.css" | relative_url }}">
   <style>
     .task-list {
       margin: 0;
@@ -12,6 +13,7 @@
       list-style-type: none;
     }
   </style>
+
 
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -28,6 +30,8 @@
     });
   </script>
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
+  <script src="{{ "assets/js/ai-highlight.js" | relative_url }}" type="text/javascript"></script>
 
 
 
